k8/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-frontend-web
  namespace: production
spec:
  selector:
    app: fsl-frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
